--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "start" : "node json-server.js"
   },
-  "devDependencies": {
+  "dependencies": {
     "json-server": "^0.16.3"
   }
 }
